force-app/main/default/objects/Product2/fields/DataDeReserva__c.field-meta.xml
<CustomField>
    <fullName>DataDeReserva__c</fullName>
    <description>Campo para estipulação de tempo de reserva de uma unidade</description>
    <label>Data de Reserva</label>
    <type>Date</type>
</CustomField>