force-app/main/default/objects/Product2/fields/Garagem__c.field-meta.xml
<CustomField>
    <fullName>Garagem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Kit de Garagem</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>São apenas permitidos produtos do tipo &quot;Vaga&quot;</errorMessage>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Vaga</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Garagem__c</referenceTo>
    <relationshipLabel>Vagas</relationshipLabel>
    <relationshipName>Produtos</relationshipName>
    <type>Lookup</type>
</CustomField>