force-app/main/default/objects/Product2/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status da unidade</description>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Disponivel</fullName>
                <default>true</default>
                <label>Disponivel</label>
            </value>
            <value>
                <fullName>Reservada</fullName>
            </value>
            <value>
                <fullName>Vendida</fullName>
            </value>
            <value>
                <fullName>&lt;&lt;LISTAR STATUS&gt;&gt;</fullName>
                <isActive>false</isActive>
                <label>&lt;&lt;LISTAR STATUS&gt;&gt;</label>
            </value>
            <value>
                <fullName>Livre</fullName>
                <isActive>false</isActive>
                <label>Livre</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>