force-app/main/default/objects/Product2/recordTypes/Apartamento.recordType-meta.xml
<RecordType>
    <fullName>Apartamento</fullName>
    <active>true</active>
    <label>Apartamento</label>
</RecordType>