force-app/main/default/objects/Product2/recordTypes/Nao_Residencial.recordType-meta.xml
<RecordType>
    <fullName>Nao_Residencial</fullName>
    <active>true</active>
    <label>Não Residencial (NR)</label>
</RecordType>